Fix colour contrast in publication headers
HTML publication headers currently don't meet WCAG AA colour contrast ratio for normal text. Changing this from $light-blue to $govuk-blue fixes this.

--- a/app/assets/stylesheets/views/_html-publication.scss
+++ b/app/assets/stylesheets/views/_html-publication.scss
@@ -31,7 +31,7 @@
   .publication-header {
     @include core-19;
     color: $white;
-    background: $light-blue;
+    background: $govuk-blue;
     padding: ($gutter / 2) $gutter $gutter;
     margin-bottom: $gutter * 2;
 
